Updating source code to 2.6.47